new file:   14. Defining Classes/Modifiers and Access Levels.ipynb modified:   14. Defining Classes/The Anatomy of a Class.ipynb

--- a/14. Defining Classes/The Anatomy of a Class.ipynb
+++ b/14. Defining Classes/The Anatomy of a Class.ipynb
@@ -105,8 +105,7 @@
     }
    },
    "source": [
-    "> $Recall\\,\\,from \\quad$ <a href=\"../11. Creating and Using Objects/The Anatomies of Objects and Classes.ipynb\">Creating and Using Objects | The Anatomies of Objects and Classes</a>\n",
-    "  "
+    "> $Recall\\,\\,from \\quad$ <a href=\"../11. Creating and Using Objects/The Anatomies of Objects and Classes.ipynb\">Creating and Using Objects | The Anatomies of Objects and Classes</a>"
    ]
   },
   {
@@ -123,7 +122,7 @@
    "source": [
     "Every `class` contains a **definition** for an *object* which describes one or more of it's: \n",
     "1. **States** – The *characteristics* of the *object* which define or describe it when it is created or updated.\n",
-    "2. **Behaviors** – The specific, distinctive *functions* which can be performed by the **objec*."
+    "2. **Behaviors** – The specific, distinctive *functions* which can be performed by the **object*."
    ]
   },
   {
@@ -384,13 +383,12 @@
     "{\n",
     "    get\n",
     "    {\n",
-    "        // reference the associated field\n",
     "        return this.sauce;\n",
     "    }\n",
     "\n",
     "    set\n",
     "    {\n",
-    "        this.name = value;\n",
+    "        this.sauce = value;\n",
     "    }\n",
     "}"
    ]
