modified:   14. Defining Classes/The Anatomy of a Class.ipynb

--- a/14. Defining Classes/The Anatomy of a Class.ipynb
+++ b/14. Defining Classes/The Anatomy of a Class.ipynb
@@ -687,7 +687,7 @@
     }
    },
    "source": [
-    "Having now defined our `Pizza` `class`, we may instantiate an object modeled oafter any specific type of real-life Pizza we choose:  "
+    "Having now defined our `Pizza` `class`, we may instantiate an object modeled after any specific type of real-life Pizza we choose:  "
    ]
   },
   {
