--- a/14. Defining Classes/The Anatomy of a Class.ipynb
+++ b/14. Defining Classes/The Anatomy of a Class.ipynb
@@ -857,7 +857,7 @@
     }
    },
    "source": [
-    "<img src=\"_img/PizzaObjectRef.jpg\" style=\"width: 400px; display: block; margin: auto\"></img>"
+    "<img src=\"_img/PizzaObjectRef2.jpg\" style=\"display: block; margin: auto\"></img>"
    ]
   },
   {
@@ -887,8 +887,19 @@
     "defaultKernelName": "csharp",
     "items": [
      {
-      "aliases": [],
+      "aliases": [
+       "c#",
+       "C#"
+      ],
+      "languageName": "C#",
       "name": "csharp"
+     },
+     {
+      "aliases": [
+       "frontend"
+      ],
+      "languageName": null,
+      "name": "vscode"
      }
     ]
    }
