modified:   14. Defining Classes/Modifiers and Access Levels.ipynb

--- a/14. Defining Classes/Modifiers and Access Levels.ipynb
+++ b/14. Defining Classes/Modifiers and Access Levels.ipynb
@@ -32,21 +32,74 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
     },
     "polyglot_notebook": {
      "kernelName": "csharp"
-    },
-    "vscode": {
-     "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "In $C\\#$ there are **four access modifiers**: \n",
+    "1. `public` \n",
+    "2. `private` \n",
+    "3. `protected`\n",
+    "4. `internal`    "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "The **access modifiers** can be used with the following `class` elements: \n",
+    "- `class` declaration\n",
+    "- fields\n",
+    "- properties\n",
+    "- methods"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Based on these **access modifiers**, we may optionally designate the **scope** (**visibility**) available for other elements of the `class` by placing the modifier in front of the `class` keyword during Declaration:"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "```c#\n",
+    "[ access_modifier ] class className\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
