modified:   14. Defining Classes/Modifiers and Access Levels.ipynb

--- a/14. Defining Classes/Modifiers and Access Levels.ipynb
+++ b/14. Defining Classes/Modifiers and Access Levels.ipynb
@@ -62,6 +62,21 @@
     }
    },
    "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
     "The **access modifiers** can be used with the following `class` elements: \n",
     "- `class` declaration\n",
     "- fields\n",
@@ -81,7 +96,22 @@
     }
    },
    "source": [
-    "Based on these **access modifiers**, we may optionally designate the **scope** (**visibility**) available for other elements of the `class` by placing the modifier in front of the `class` keyword during Declaration:"
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Based on these **access modifiers**, we may optionally designate the **scope** (**visibility**) available for other elements of the `class` by placing the modifier in front of the `class` keyword during Declaration, as follows:"
    ]
   },
   {
