modified:   14. Defining Classes/Modifiers and Access Levels.ipynb modified:   14. Defining Classes/The Anatomy of a Class.ipynb

--- a/14. Defining Classes/Modifiers and Access Levels.ipynb
+++ b/14. Defining Classes/Modifiers and Access Levels.ipynb
@@ -130,6 +130,245 @@
     "[ access_modifier ] class className\n",
     "```"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "### Access Level `public`"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "If we declare a class **access modifier** as `public`, we can **reach it from every class and from every namespace**, regardless of where it exists.    \n",
+    "    \n",
+    "It means that every other class can create objects from this type and has access to the methods and the fields of the `public` class."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Say, for example, we declared the following `Person` `class` whose $fields$, $properties$, $constructor$, and $method$ are all of a `public` **access level**:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "// Class Declaration\n",
+    "public class Person\n",
+    "{\n",
+    "\n",
+    "    // Field Declarations -----------------------------------------\n",
+    "    public string name,\n",
+    "                  objective = \"be nible, be quick.\";\n",
+    "    //-------------------------------------------------------------\n",
+    "\n",
+    "\n",
+    "    // Property Definitions ---------------------------------------\n",
+    "    public string Name\n",
+    "    {\n",
+    "        get { return this.name; }\n",
+    "        set { this.name = value; }\n",
+    "    }\n",
+    "    //-------------------------------------------------------------\n",
+    "    public string Objective\n",
+    "    {\n",
+    "        get { return this.objective; }\n",
+    "        set { this.objective = value; }\n",
+    "    }\n",
+    "    //-------------------------------------------------------------\n",
+    "\n",
+    "\n",
+    "    // Constructor ------------------------------------------------\n",
+    "    public Person( string name )\n",
+    "    {\n",
+    "        this.Name = name;\n",
+    "    }\n",
+    "    //-------------------------------------------------------------\n",
+    "\n",
+    "\n",
+    "    // Method -----------------------------------------------------\n",
+    "    public void JumpOverACandleStick()\n",
+    "    {\n",
+    "        Console.WriteLine(\n",
+    "            $\"{ this.Name }, { this.Objective } { this.Name } \"\n",
+    "            +\n",
+    "            \"jumped over a candle stick.\"\n",
+    "        );\n",
+    "    }\n",
+    "    //-------------------------------------------------------------\n",
+    "\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "When a $method$, $constructor$, or a $field$ of a class is declared with a `public` **access level**, it can be used from other classes, independently from the fact if another class is declared in the same namespace, assembly, or outside of it:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "public class CandleStick\n",
+    "{\n",
+    "\n",
+    "    public void GetJumpedOver( Person jack )\n",
+    "    {\n",
+    "        jack.JumpOverACandleStick();\n",
+    "    }\n",
+    "    \n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jack, be nible, be quick. Jack jumped over a candle stick.\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "new CandleStick().GetJumpedOver( new Person( \"Jack\" ) );"
+   ]
   }
  ],
  "metadata": {
@@ -143,72 +382,8 @@
     "defaultKernelName": "csharp",
     "items": [
      {
-      "aliases": [
-       "c#",
-       "C#"
-      ],
-      "languageName": "C#",
+      "aliases": [],
       "name": "csharp"
-     },
-     {
-      "aliases": [],
-      "name": ".NET"
-     },
-     {
-      "aliases": [
-       "frontend"
-      ],
-      "name": "vscode"
-     },
-     {
-      "aliases": [
-       "f#",
-       "F#"
-      ],
-      "languageName": "F#",
-      "name": "fsharp"
-     },
-     {
-      "aliases": [],
-      "languageName": "HTML",
-      "name": "html"
-     },
-     {
-      "aliases": [
-       "js"
-      ],
-      "languageName": "JavaScript",
-      "name": "javascript"
-     },
-     {
-      "aliases": [],
-      "languageName": "KQL",
-      "name": "kql"
-     },
-     {
-      "aliases": [],
-      "languageName": "Mermaid",
-      "name": "mermaid"
-     },
-     {
-      "aliases": [
-       "powershell"
-      ],
-      "languageName": "PowerShell",
-      "name": "pwsh"
-     },
-     {
-      "aliases": [],
-      "languageName": "SQL",
-      "name": "sql"
-     },
-     {
-      "aliases": [],
-      "name": "value"
-     },
-     {
-      "aliases": [],
-      "name": "webview"
      }
     ]
    }
