modified:   14. Defining Classes/Modifiers and Access Levels.ipynb

--- a/14. Defining Classes/Modifiers and Access Levels.ipynb
+++ b/14. Defining Classes/Modifiers and Access Levels.ipynb
@@ -230,7 +230,7 @@
     "\n",
     "    // Field Declarations -----------------------------------------\n",
     "    public string name,\n",
-    "                  objective = \"be nible, be quick.\";\n",
+    "                  objective = \"be nimble, be quick.\";\n",
     "    //-------------------------------------------------------------\n",
     "\n",
     "\n",
@@ -362,7 +362,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Jack, be nible, be quick. Jack jumped over a candle stick.\r\n"
+      "Jack, be nimble, be quick. Jack jumped over a candle stick.\r\n"
      ]
     }
    ],
@@ -386,6 +386,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "dotnet_interactive": {
@@ -395,7 +396,28 @@
      "kernelName": "csharp"
     }
    },
-   "source": []
+   "source": [
+    "### Access Level `internal`"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "If we declare a class with an `internal` **access modifier**, it will be **accessible only from the same namespace**.    \n",
+    "   \n",
+    "This means that only the classes from the same assembly can create objects from this type class, or to have access to the methods and fields of the class.\n",
+    "   \n",
+    "This is the **default access level** when no **access modifier** is specified in the declaration of the class."
+   ]
   }
  ],
  "metadata": {
