--- a/14. Defining Classes/Modifiers and Access Levels.ipynb
+++ b/14. Defining Classes/Modifiers and Access Levels.ipynb
@@ -414,9 +414,256 @@
    "source": [
     "If we declare a class with an `internal` **access modifier**, it will be **accessible only from the same namespace**.    \n",
     "   \n",
-    "This means that only the classes from the same assembly can create objects from this type class, or to have access to the methods and fields of the class.\n",
+    "This means that only the classes from the same assembly can create objects from this type class, or to have access to the methods and fields of the class."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "`internal` is the **default access level** when no **access modifier** is specified in the declaration of the class:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "// Will be internal by default,  \n",
+    "// since no other modifier has been provided\n",
+    "class Humpty \n",
+    "{\n",
+    "\n",
+    "    // Field Declarations -----------------------------------------\n",
+    "    internal string name;\n",
+    "    //-------------------------------------------------------------\n",
+    "\n",
+    "\n",
+    "    // Property Definitions ---------------------------------------\n",
+    "    internal string Name\n",
+    "    {\n",
+    "        get { return this.name; }\n",
+    "        set { this.name = value; }\n",
+    "    }\n",
+    "    //-------------------------------------------------------------\n",
+    "\n",
+    "\n",
+    "    // Constructor ------------------------------------------------\n",
+    "    internal Humpty( string name )\n",
+    "    {\n",
+    "        this.Name = name;\n",
+    "    }\n",
+    "    //-------------------------------------------------------------\n",
+    "\n",
+    "\n",
+    "    // Method -----------------------------------------------------\n",
+    "    internal string SitOnAWall()\n",
+    "    {\n",
+    "        return  $\"Humpty { this.Name } sat on a wall....\\n\";\n",
+    "    }\n",
+    "    //-------------------------------------------------------------\n",
+    "\n",
+    "}\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "When a member of some class is declared with an `internal` **access level** , then this element from the class can be accessed from every class in the same assembly (i.e. in the same project scope), but not from classes outside it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "class Wall\n",
+    "{\n",
+    "\n",
+    "    internal void CauseGreatFall( Humpty dumpty )\n",
+    "    { \n",
+    "        Console.WriteLine(\n",
+    "            $\"{dumpty.SitOnAWall()}\"\n",
+    "            +\n",
+    "            $\"Humpty { dumpty.Name } had a great fall :)\"\n",
+    "        );\n",
+    "    }\n",
+    "\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Humpty Dumpty sat on a wall....\n",
+      "Humpty Dumpty had a great fall :)\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "new Wall().CauseGreatFall( new Humpty( \"Dumpty\" ) );"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "### Access Level `private`"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "The `private` access level is one which defines the **most restrictive level of visibility** of the class and its elements.    \n",
     "   \n",
-    "This is the **default access level** when no **access modifier** is specified in the declaration of the class."
+    "The private modifier is used to indicate, that the element, to which is issued, cannot be accessed from any other class (except the class, in which it is defined), even if this class exists in the same namespace. This is the default access level, i.e. it is used when there is no access level modifier in front of the respective element of a class (this is true only for elements inside a class)."
    ]
   }
  ],
