modified:   14. Defining Classes/Modifiers and Access Levels.ipynb

--- a/14. Defining Classes/Modifiers and Access Levels.ipynb
+++ b/14. Defining Classes/Modifiers and Access Levels.ipynb
@@ -444,12 +444,12 @@
     }
    },
    "source": [
-    "`internal` is the **default access level** when no **access modifier** is specified in the declaration of the class:"
+    "Say, for example, we declared the following `Person` `class` whose $fields$, $properties$, $constructor$, and $method$ are all of a `internal` **access level**:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -465,7 +465,7 @@
    "source": [
     "// Will be internal by default,  \n",
     "// since no other modifier has been provided\n",
-    "class Humpty \n",
+    "internal class Humpty \n",
     "{\n",
     "\n",
     "    // Field Declarations -----------------------------------------\n",
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -546,7 +546,7 @@
    },
    "outputs": [],
    "source": [
-    "class Wall\n",
+    "internal class Wall\n",
     "{\n",
     "\n",
     "    internal void CauseGreatFall( Humpty dumpty )\n",
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -631,21 +631,6 @@
     }
    },
    "source": [
-    "<br>"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
-   "source": [
     "### Access Level `private`"
    ]
   },
@@ -663,7 +648,157 @@
    "source": [
     "The `private` access level is one which defines the **most restrictive level of visibility** of the class and its elements.    \n",
     "   \n",
-    "The private modifier is used to indicate, that the element, to which is issued, cannot be accessed from any other class (except the class, in which it is defined), even if this class exists in the same namespace. This is the default access level, i.e. it is used when there is no access level modifier in front of the respective element of a class (this is true only for elements inside a class)."
+    "The `private` modifier is used to indicate, that the element, to which is issued, **cannot be accessed from any other class** (except the class, in which it is defined), even if this class exists in the same namespace. \n",
+    "   \n",
+    "**This is the default access level**, i.e. it is used when there is no access level modifier in front of the respective element of a class (this is true only for elements inside a class)."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Let's say we decalare the following class implementation a Secret Message whose $fields$, $properties$, $constructor$, and $method$ are all of a `private` **access level**::"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "private class Secret\n",
+    "{\n",
+    "\n",
+    "    // Field Declarations -----------------------------------------\n",
+    "    private string message;\n",
+    "    //-------------------------------------------------------------\n",
+    "\n",
+    "\n",
+    "    // Property Definitions ---------------------------------------\n",
+    "    private string Message\n",
+    "    {\n",
+    "        get { return this.message; }\n",
+    "        set { this.message = value; }\n",
+    "    }\n",
+    "    //-------------------------------------------------------------\n",
+    "\n",
+    "\n",
+    "    // Constructor ------------------------------------------------\n",
+    "    private Secret( string message )\n",
+    "    {\n",
+    "        this.Message = message;\n",
+    "    }\n",
+    "    //-------------------------------------------------------------\n",
+    "\n",
+    "\n",
+    "    // Method -----------------------------------------------------\n",
+    "    private string SpillTheBeans()\n",
+    "    {\n",
+    "        return  this.Message;\n",
+    "    }\n",
+    "    //-------------------------------------------------------------\n",
+    "    \n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "The elements of the class which are declared `private` (or without any access modifier, because `private` is the **default one**), **cannot be accessed outside of the class in which they are declared**, even if those external classes provide `public` visibility:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "(4,19): error CS0051: Inconsistent accessibility: parameter type 'Secret' is less accessible than method 'TattleTale.TellSecret(Secret)'\r\n(6,31): error CS0122: 'Secret.SpillTheBeans()' is inaccessible due to its protection level",
+     "output_type": "error",
+     "traceback": [
+      "(4,19): error CS0051: Inconsistent accessibility: parameter type 'Secret' is less accessible than method 'TattleTale.TellSecret(Secret)'\r\n",
+      "(6,31): error CS0122: 'Secret.SpillTheBeans()' is inaccessible due to its protection level"
+     ]
+    }
+   ],
+   "source": [
+    "public class TattleTale\n",
+    "{\n",
+    "\n",
+    "    public string TellSecret( Secret whoShotKennedy )\n",
+    "    {\n",
+    "        return whoShotKennedy.SpillTheBeans();\n",
+    "    }\n",
+    "\n",
+    "}"
    ]
   }
  ],
