modified:   14. Defining Classes/Modifiers and Access Levels.ipynb

--- a/14. Defining Classes/Modifiers and Access Levels.ipynb
+++ b/14. Defining Classes/Modifiers and Access Levels.ipynb
@@ -463,8 +463,7 @@
    },
    "outputs": [],
    "source": [
-    "// Will be internal by default,  \n",
-    "// since no other modifier has been provided\n",
+    "// Class Declaration\n",
     "internal class Humpty \n",
     "{\n",
     "\n",
@@ -699,6 +698,7 @@
    },
    "outputs": [],
    "source": [
+    "// Class Declaration\n",
     "private class Secret\n",
     "{\n",
     "\n",
