modified:   14. Defining Classes/Modifiers and Access Levels.ipynb modified:   14. Defining Classes/The Anatomy of a Class.ipynb

--- a/14. Defining Classes/Modifiers and Access Levels.ipynb
+++ b/14. Defining Classes/Modifiers and Access Levels.ipynb
@@ -444,7 +444,7 @@
     }
    },
    "source": [
-    "Say, for example, we declared the following `Person` `class` whose $fields$, $properties$, $constructor$, and $method$ are all of a `internal` **access level**:"
+    "Say, for example, we declared the following `Humpty` `class` whose $fields$, $properties$, $constructor$, and $method$ are all of a `internal` **access level**:"
    ]
   },
   {
@@ -813,8 +813,61 @@
     "defaultKernelName": "csharp",
     "items": [
      {
-      "aliases": [],
+      "aliases": [
+       "c#",
+       "C#"
+      ],
+      "languageName": "C#",
       "name": "csharp"
+     },
+     {
+      "aliases": [],
+      "name": ".NET"
+     },
+     {
+      "aliases": [
+       "f#",
+       "F#"
+      ],
+      "languageName": "F#",
+      "name": "fsharp"
+     },
+     {
+      "aliases": [],
+      "languageName": "HTML",
+      "name": "html"
+     },
+     {
+      "aliases": [],
+      "languageName": "KQL",
+      "name": "kql"
+     },
+     {
+      "aliases": [],
+      "languageName": "Mermaid",
+      "name": "mermaid"
+     },
+     {
+      "aliases": [
+       "powershell"
+      ],
+      "languageName": "PowerShell",
+      "name": "pwsh"
+     },
+     {
+      "aliases": [],
+      "languageName": "SQL",
+      "name": "sql"
+     },
+     {
+      "aliases": [],
+      "name": "value"
+     },
+     {
+      "aliases": [
+       "frontend"
+      ],
+      "name": "vscode"
      }
     ]
    }
