--- a/14. Defining Classes/The Anatomy of a Class.ipynb
+++ b/14. Defining Classes/The Anatomy of a Class.ipynb
@@ -152,6 +152,78 @@
     }
    },
    "source": [
+    "### The Reserved Word `this`"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "The **reserved word** `this` in C# is used to reference the **current object**, when one is used from within the same class.    \n",
+    "`this` represents the **object from which a method or constructor is called**."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "```c#\n",
+    "// access some specified field from a specified class\n",
+    "this.someField;  \n",
+    "\n",
+    "\n",
+    "// access some specified method from a specified class\n",
+    "this.someMethod;\n",
+    "\n",
+    "\n",
+    "// access the constructor of a specified class\n",
+    "this(\"argument\"); \n",
+    "```"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
     "### Elements of a `class`"
    ]
   },
@@ -199,6 +271,38 @@
    "source": [
     "```c#\n",
     "public class Pizza\n",
+    "```"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Observe that the declaration made above may be generalized as follows:"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "```c#\n",
+    "[access_modifier] class className\n",
     "```"
    ]
   },
@@ -297,7 +401,52 @@
     }
    },
    "source": [
-    "**Fields** (sometimes also referred to as **member-variables**) declared inside the `class` contain the data that accounts for the object's $state$ at any given point in time."
+    "In order to describe an object, we focus on its **characteristics**, which are related to the problems solved in our program. These **characteristics** of the real-world object we will hold in the declaration of the class in special types of variables. These variables, called **fields** (sometimes also referred to as **member-variables**), declared inside the `class`, contain the data that accounts for the object's $state$ at any given point in time."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "##### Declaring Fields"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "**Fields** are declared in the body of the class, but outside the body of a any single method or constructor, as shown below:"
    ]
   },
   {
@@ -313,9 +462,262 @@
    },
    "source": [
     "```c#\n",
-    "// Field definition\n",
-    "private string sauce;\n",
+    "public class Pizza\n",
+    "{\n",
+    "    // Field definitions\n",
+    "    private string sauce,\n",
+    "                   cheese,\n",
+    "                   toppings;\n",
+    "}\n",
     "```"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Observe that we may generalize a **field definition** as follows:"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "```c#\n",
+    "[access_modifier] fieldType fieldName \n",
+    "```"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "##### Initialization of Fields"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "When we declare a **field** it is possible to **assign to it an initial value**:"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "```c#\n",
+    "public class Pizza\n",
+    "{\n",
+    "    // Initializing Fields\n",
+    "    private string sauce    = \"Traditional Pizza Sauce\",\n",
+    "                   cheese   = \"Chedder, Provolone, Monterey Jack\",\n",
+    "                   toppings;\n",
+    "}\n",
+    "```"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Observe that, in the declaration performed above, the fields `sauce` and `cheese` were **Initialized**, while the field `toppings` received a *Default Value*. The following table addresses the most common data types andf their *Default Values*:"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<table style=\"margin-left: auto; margin-right: auto\">\n",
+    "    <thead>\n",
+    "        <tr>\n",
+    "            <th>Type of Field</th>\n",
+    "            <th>Default Value</th>\n",
+    "        </tr>\n",
+    "    </thead>\n",
+    "    <tbody>\n",
+    "        <tr>\n",
+    "            <td><code>bool</code></td>\n",
+    "            <td><code>false</code></td>\n",
+    "        </tr>\n",
+    "        <tr>\n",
+    "            <td><code>byte</code></td>\n",
+    "            <td><code>0</code></td>\n",
+    "        </tr>\n",
+    "        <tr>\n",
+    "            <td><code>char</code></td>\n",
+    "            <td><code>'\\0'</code></td>\n",
+    "        </tr>\n",
+    "        <tr>\n",
+    "            <td><code>decimal</code></td>\n",
+    "            <td><code>0.0M</code></td>\n",
+    "        </tr>\n",
+    "        <tr>\n",
+    "            <td><code>double</code></td>\n",
+    "            <td><code>0.0D</code></td>\n",
+    "        </tr>\n",
+    "        <tr>\n",
+    "            <td><code>float</code></td>\n",
+    "            <td><code>0.0F</code></td>\n",
+    "        </tr>\n",
+    "        <tr>\n",
+    "            <td><code>int</code></td>\n",
+    "            <td><code>0</code></td>\n",
+    "        </tr>\n",
+    "        <tr>\n",
+    "            <td><code>object reference</code></td>\n",
+    "            <td><code>null</code></td>\n",
+    "        </tr>\n",
+    "    </tbody>\n",
+    "</table>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Conclusively, we may generalize a **field initialization** as follows:"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "```c#\n",
+    "[access_modifier] fieldType fieldName = initial_value;\n",
+    "```"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "##### Field Scope"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "The **scope of a class field** starts from the line where is declared and ends at the closing bracket of the body of the class."
    ]
   },
   {
@@ -898,7 +1300,6 @@
       "aliases": [
        "frontend"
       ],
-      "languageName": null,
       "name": "vscode"
      },
      {
