modified:   14. Defining Classes/The Anatomy of a Class.ipynb

--- a/14. Defining Classes/The Anatomy of a Class.ipynb
+++ b/14. Defining Classes/The Anatomy of a Class.ipynb
@@ -167,8 +167,8 @@
     }
    },
    "source": [
-    "The **reserved word** `this` in C# is used to reference the **current object**, when one is used from within the same class.    \n",
-    "`this` represents the **object from which a method or constructor is called**."
+    "In $C\\#$, The **reserved word** `this` is used to reference the **current object** *within the same class*.    \n",
+    "In other words, `this` represents the **object from which a method or constructor is called**."
    ]
   },
   {
